--- a/Restabook/Restabook/Areas/Manage/Views/Administration/EditUserInRole.cshtml
+++ b/Restabook/Restabook/Areas/Manage/Views/Administration/EditUserInRole.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewData["Title"] = "EditUserInRole";
     Layout = "~/Areas/Manage/Views/Shared/_Layout.cshtml";
-    var roleId = ViewBag.roleId;
+    string roleId = ViewBag.roleId;
     }
 
 <form method="post">
@@ -26,7 +26,7 @@
         </div>
         <div class="card-footer">
             <button type="submit" class="btn btn-success">Add</button>
-            <a asp-action="edituser" asp-controller="administration" asp-route-id="@roleId" class="btn btn-danger" >Back</a>
+            <a asp-action="editrole" asp-controller="administration" asp-route-id="@roleId" class="btn btn-danger" >Back</a>
         </div>
 
     </div>
