--- a/Restabook/Restabook/Areas/Manage/Views/Administration/ListUsers.cshtml
+++ b/Restabook/Restabook/Areas/Manage/Views/Administration/ListUsers.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<AppUser>
+﻿
+@model IEnumerable<AppUser>
 @{
     ViewData["Title"] = "ListUsers";
     Layout = "~/Areas/Manage/Views/Shared/_Layout.cshtml";
@@ -26,6 +27,18 @@
                 <th scope="row">@counter</th>
                 <td>@item.UserName</td>
                 
+                <td>
+                    <a asp-action="edituser" asp-controller="account" asp-route-id="@item.Id" class="btn btn-info">Edit</a>
+                    @if (item.UserName.ToLower() == "admin")
+                    {
+                        <a asp-action="deleteuser" asp-controller="account" hidden asp-route-id="@item.Id" class="btn btn-danger">Delete</a>
+                    }
+                    else
+                    {
+                        <a asp-action="deleteuser" asp-controller="account" asp-route-id="@item.Id" class="btn btn-danger">Delete</a>
+                    }
+
+                </td>
 
 
             </tr>
